# cuesearch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: bench_solver.cpp
core/: cloth.h  constants.h  frame.h  vec3.h
docs/: BREAK_AND_RUN.md  NOTES.md  POSITIONAL_DESIGN.md  VALIDATION.md  break_and_run.csv  example_combo.txt  example_full_rack.txt  example_snooker.out  example_snooker.txt  example_table.txt  golden_best.txt  golden_grid.csv
engine/: ball.h  cuestrike.cpp  cuestrike.h  game.cpp  game.h  layout.cpp  layout.h  motion.cpp  motion.h  resolve_ballball.cpp  resolve_ballball.h  resolve_cushion.cpp  resolve_cushion.h  table.h  world.cpp  world.h
math/: poly_solvers.cpp  poly_solvers.h
solver/: difficulty.cpp  difficulty.h  plan.cpp  plan.h  runout.cpp  runout.h  shape.cpp  shape.h  solver.cpp  solver.h  winsolve.cpp  winsolve.h
tests/: test_br1_mc.cpp  test_br2_rescue.cpp  test_combo.cpp  test_cushion.cpp  test_difficulty.cpp  test_effects.cpp  test_game.cpp  test_invariants.cpp  test_io.cpp  test_leave.cpp  test_motion.cpp  test_plan.cpp  test_poly_solvers.cpp  test_potcurve.cpp  test_resolve.cpp  test_runout.cpp  test_runout_default.cpp  test_runout_plan.cpp  test_runout_ro.cpp  test_runout_ro4.cpp  test_shape.cpp  test_solver.cpp  test_winsolve.cpp  test_world.cpp
tools/: br_validate.sh  break_and_run.cpp  dump_events.cpp  golden_break.cpp  match.cpp  probe_leave.cpp  randtable.cpp  solve.cpp  trace_br.cpp  trace_motion.cpp  trace_shot.cpp
viz/: plot_golden_break.py  render.py
